get rid of apache maven plugin for java 11